# aws-robomaker-sample-application-delivery-challenge

./: Config  README.md  setup_ROBOTIS_sample.sh  ws_info.yaml  ws_setup.py  ws_setup.sh
browser/: .gitignore  game_console.html  robot_controller.html
browser/css/: controller_style.css
browser/js/: app-gm.js  app.js
cf_templates/: bootstrap.cfn.yaml
contest/: .gitignore
contest/docs/: detail.md  howto-expert.md  howto-one-make.md
contest/expert/: robot_ws  ws_setup.py  ws_setup.sh
contest/expert/cf_templates/: cognito_setting.cfn.yaml
contest/expert/install_utils/: jp.bionic.sources.list  setup.bash
contest/expert/templates/: config.yaml.temp  roboMakerSettings.temp  settings.yaml.temp
contest/one-make/: onemake_setup.sh  onemake_ws_setup.py
contest/one-make/onemake_robot_ws/: .gitignore
contest/one-make/onemake_robot_ws/src/aws_game_manager/: CMakeLists.txt  package.xml
contest/one-make/onemake_robot_ws/src/aws_game_manager/launch/: game_manager_robot.launch  game_manager_simulation.launch
contest/one-make/onemake_robot_ws/src/aws_game_manager/nodes/: aws_game_manager.py
contest/one-make/templates/: app-settings.js.temp  onemake_roboMakerSettings.temp
docs/: Detail.md  HOWTO.md  HOWTO_Linux.md
docs/deploy/: HOWTO_deploy_worksheet.txt  tb3_robot_controller.launch  tb3_robot_navigation.launch
install_utils/: custom_dependencies_template  jp.xenial.sources.list
robot_ws/: .gitignore
robot_ws/src/aws_game_manager/: CMakeLists.txt  package.xml
robot_ws/src/aws_game_manager/launch/: game_manager.launch
robot_ws/src/aws_game_manager/nodes/: aws_game_manager.py
robot_ws/src/delivery_robot_sample/: CMakeLists.txt  package.xml
robot_ws/src/delivery_robot_sample/launch/: controller.launch  navigation.launch  navigation_robot.launch  navigation_simulation.launch  rviz_for_navigation.launch  slam.launch  slam_robot.launch  slam_simulation.launch
robot_ws/src/delivery_robot_sample/nodes/: location_publisher  map_controller  navigation  remote_controller
robot_ws/src/delivery_robot_sample/rviz/: deliverychallenge.rviz
robot_ws/src/delivery_robot_sample/scripts/: launch_navigation_stack.sh
robot_ws/src/delivery_robot_sample/srv/: MapSaveAndUpload.srv
robot_ws/src/turtlebot3_description_reduced_mesh/: package.xml
robot_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.urdf.xacro
simulation_ws/: .rosinstall
simulation_ws/src/delivery_challenge_simulation/: CMakeLists.txt  package.xml
simulation_ws/src/delivery_challenge_simulation/launch/: create_stage.launch  create_stage0.launch
simulation_ws/src/delivery_challenge_simulation/meshes/: course1.dae
simulation_ws/src/delivery_challenge_simulation/models/bus1/: model.config  model.sdf
simulation_ws/src/delivery_challenge_simulation/models/bus1/meshes/: bus1.dae
simulation_ws/src/delivery_challenge_simulation/models/dynamic_object/: model.config  model.sdf
simulation_ws/src/delivery_challenge_simulation/models/dynamic_object/meshes/: dynamic_object.dae
simulation_ws/src/delivery_challenge_simulation/models/playroom/: model.sdf
simulation_ws/src/delivery_challenge_simulation/models/playroom_v2/: model.config  model.sdf
simulation_ws/src/delivery_challenge_simulation/models/playroom_v2/meshes/: collision_wall.stl  visual_v5.dae
simulation_ws/src/delivery_challenge_simulation/models/unit_cylinder/: model.config  model.sdf
simulation_ws/src/delivery_challenge_simulation/urdf/: turtlebot3_burger.urdf.xacro
simulation_ws/src/delivery_challenge_simulation/worlds/: stage.world  stage0.world  stage0_v2.world  stage_v2.world
simulation_ws/src/gazebo_plugins/pose_animation_plugin/: CMakeLists.txt  package.xml
simulation_ws/src/gazebo_plugins/pose_animation_plugin/src/: pose_animation.cc
simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch
simulation_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.urdf.xacro
templates/: launch_navigation.sh.temp  launch_slam.sh.temp  roboMakerSettings.temp
