<?xml version="1.0"?>
<package format="2">
  <name>pose_animation_plugin</name>
  <version>1.0.0</version>
  <description>The pose_animation_plugin package</description>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>